[package]
name = "trust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0" # MSRV

license = "MIT OR Apache-2.0"
repository = "https://github.com/lars-schumann/trust"
# homepage = ""
readme = "README.md"
description = "Trusted versions of std traits"
keywords = ["no_std", "unsafe"]
categories = ["no-std", "no-std::no-alloc"]

[dependencies]

[features]
alloc = []
